Backed out 4 changesets (bug 1927321, bug 1924864) for causing multiple wpt failures. a=backout
Backed out changeset b729604a1b3b (bug 1927321)
Backed out changeset 5e42ddcef6cf (bug 1927321)
Backed out changeset f6f28d6ae060 (bug 1924864)
Backed out changeset 160fecedb4cf (bug 1924864)

UltraBlame original commit: 00dc3a0cb565582c175dff58141a141ca732d62c

--- a/testing/web-platform/meta/IndexedDB/get-databases.any.js.ini
+++ b/testing/web-platform/meta/IndexedDB/get-databases.any.js.ini
@@ -89,22 +89,6 @@ asan
 PASS
 FAIL
 ]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
 [
 get
 -
@@ -157,14 +141,26 @@ commited
 expected
 :
 if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 fission
 and
 not
-asan
-and
 debug
-and
+:
+[
+PASS
+FAIL
+]
+if
 (
 os
 =
@@ -173,34 +169,8 @@ os
 android
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
-and
-(
-os
-=
-=
-"
-mac
-"
-)
 and
 debug
-:
-[
-PASS
-FAIL
-]
-if
-not
-fission
-and
-asan
 :
 [
 PASS
