--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -23,6 +23,9 @@ popovers
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -32,17 +35,49 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+not
+debug
+and
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
 not
+asan
+and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+not
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -50,8 +85,11 @@ and
 not
 tsan
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -61,9 +99,6 @@ win
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -73,30 +108,24 @@ x86
 "
 )
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
+mac
 "
 )
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
 [
 The
@@ -116,6 +145,9 @@ popovers
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -125,17 +157,49 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+not
+debug
+and
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
 not
+asan
+and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+not
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -143,8 +207,11 @@ and
 not
 tsan
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -154,9 +221,6 @@ win
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -166,30 +230,24 @@ x86
 "
 )
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
+mac
 "
 )
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
 [
 The
@@ -209,6 +267,9 @@ transition
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -218,17 +279,49 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+not
+debug
+and
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
 not
+asan
+and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+not
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -236,8 +329,11 @@ and
 not
 tsan
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -247,9 +343,6 @@ win
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -259,30 +352,24 @@ x86
 "
 )
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
+mac
 "
 )
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
 [
 The
@@ -300,6 +387,9 @@ removal
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -309,17 +399,49 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+not
+debug
+and
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
 not
+asan
+and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+not
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -327,8 +449,11 @@ and
 not
 tsan
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -338,9 +463,6 @@ win
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -350,30 +472,24 @@ x86
 "
 )
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
+mac
 "
 )
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
 [
 The
@@ -387,6 +503,9 @@ coalesced
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -396,17 +515,49 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+not
+debug
+and
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
 not
+asan
+and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+not
 debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -414,8 +565,11 @@ and
 not
 tsan
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -425,9 +579,6 @@ win
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -437,28 +588,22 @@ x86
 "
 )
 :
-FAIL
+PASS
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
+mac
 "
 )
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
