--- a/testing/web-platform/meta/html/semantics/popovers/popover-hidden-display.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-hidden-display.html.ini
@@ -10,44 +10,19 @@ html
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
 =
 "
-mac
+win
 "
 )
-and
-debug
 :
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-FAIL
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-:
-FAIL
+PASS
 if
 (
 os
@@ -60,22 +35,19 @@ android
 and
 not
 debug
+and
+not
+fission
 :
 [
-FAIL
 PASS
 TIMEOUT
 ]
 if
-os
-=
-=
-"
-win
-"
+debug
 :
-FAIL
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
