--- a/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting-anchor.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting-anchor.tentative.html.ini
@@ -13,6 +13,22 @@ tentative
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+TIMEOUT
 [
 Single
 popover
@@ -79,8 +95,8 @@ and
 debug
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -96,145 +112,691 @@ not
 debug
 :
 [
-FAIL
 PASS
+TIMEOUT
+FAIL
+NOTRUN
+]
+[
+Single
+popover
+=
+manual
+ancestor
+with
+fullscreen
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+dialog
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+fullscreen
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+fullscreen
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Nested
+popover
+=
+auto
+ancestors
+target
+is
+outer
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+target
+is
+outer
+with
+dialog
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Nested
+popover
+=
+auto
+ancestors
+target
+is
+outer
+with
+fullscreen
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+target
+is
+outer
+with
+fullscreen
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+dialog
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+fullscreen
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+fullscreen
+anchor
+attribute
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+FAIL
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+fullscreen
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Top
+layer
+inside
+of
+nested
+element
+with
+fullscreen
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Nested
+popover
+=
+auto
+ancestors
+target
+is
+outer
+with
+fullscreen
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+NOTRUN
+[
+Single
+popover
+=
+manual
+ancestor
+with
+fullscreen
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
 TIMEOUT
 NOTRUN
 ]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Single
-popover
-=
-manual
-ancestor
-with
-fullscreen
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-dialog
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-dialog
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-fullscreen
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-fullscreen
-anchor
-attribute
-]
-expected
-:
-FAIL
 [
 Nested
 popover
@@ -246,223 +808,6 @@ is
 outer
 with
 dialog
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-target
-is
-outer
-with
-dialog
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-target
-is
-outer
-with
-fullscreen
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-target
-is
-outer
-with
-fullscreen
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-dialog
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-dialog
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-fullscreen
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-fullscreen
-anchor
-attribute
-]
-expected
-:
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-fullscreen
 top
 layer
 element
@@ -484,326 +829,10 @@ mac
 "
 )
 and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
 not
 debug
 :
-[
-FAIL
-PASS
-]
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-dialog
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Top
-layer
-inside
-of
-nested
-element
-with
-fullscreen
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-with
-dialog
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-target
-is
-outer
-with
-fullscreen
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Single
-popover
-=
-manual
-ancestor
-with
-fullscreen
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
 NOTRUN
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Nested
-popover
-=
-auto
-ancestors
-target
-is
-outer
-with
-dialog
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
 [
 Single
 popover
@@ -836,27 +865,9 @@ and
 debug
 :
 [
-FAIL
 PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
 FAIL
-PASS
 ]
-FAIL
 [
 Single
 popover
@@ -881,156 +892,6 @@ and
 debug
 :
 [
-FAIL
 PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
 FAIL
-PASS
 ]
-FAIL
-[
-Single
-popover
-=
-manual
-ancestor
-with
-dialog
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Single
-popover
-=
-auto
-ancestor
-with
-dialog
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Single
-popover
-=
-auto
-ancestor
-with
-dialog
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
-[
-Single
-popover
-=
-manual
-ancestor
-with
-dialog
-top
-layer
-element
-*
-is
-*
-a
-popover
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-FAIL
