--- a/testing/web-platform/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
@@ -13,39 +13,13 @@ os
 =
 =
 "
-mac
+android
 "
 )
 and
-debug
+fission
 :
 [
+TIMEOUT
 OK
-TIMEOUT
-]
-[
-MediaStreamAudioSourceNode
-captures
-the
-right
-track
-.
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-debug
-:
-[
-PASS
-TIMEOUT
 ]
