--- a/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss-scroll-within.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss-scroll-within.html.ini
@@ -30,13 +30,55 @@ os
 =
 =
 "
-mac
+linux
 "
 )
 and
+not
+fission
+and
 debug
 :
+[
+PASS
 FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+:
+[
+PASS
+FAIL
+]
 if
 (
 os
@@ -47,19 +89,10 @@ android
 "
 )
 and
+not
 debug
 :
-FAIL
-if
-os
-=
-=
-"
-win
-"
-:
-FAIL
 [
-FAIL
 PASS
+FAIL
 ]
