Bug 1918178 - Expand the layout viewport and shift position:fixed/sticky items in APZ only if it's necessary. r=botond,geckoview-reviewers,owlish
On non resizes-content modes while the software keyboard is shown, the layout
viewport is unchanged, thus any position:fixed or sitcky elements which are
stuck the root scroller don't need to be moved in response to the dynamic
toolbar movement.

Differential Revision: https://phabricator.services.mozilla.com/D225905

UltraBlame original commit: a71e6ad5797190a1d6d9e62252364f4300cbb395

--- a/mobile/android/geckoview/src/androidTest/AndroidManifest.xml
+++ b/mobile/android/geckoview/src/androidTest/AndroidManifest.xml
@@ -258,6 +258,15 @@ GeckoViewTestActivity
 "
 android
 :
+windowSoftInputMode
+=
+"
+stateUnspecified
+|
+adjustResize
+"
+android
+:
 exported
 =
 "
