Bug 1927355 - [wpt-sync] Update web-platform-tests to 73d6bd0d61f0ad5341d0c2303a7638e3aa12a594, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 73d6bd0d61f0ad5341d0c2303a7638e3aa12a594
wpt-type: landing

UltraBlame original commit: 008f54175200e3d13596b28693bb65c9b5e10796

--- a/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
+++ b/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
@@ -17,4 +17,95 @@ html
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
+fission
+and
+asan
+:
+[
 ERROR
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+and
+debug
+and
+not
+fission
+:
+[
+ERROR
+TIMEOUT
+]
+ERROR
+[
+\
+n
+View
+transitions
+:
+null
+event
+.
+viewTransition
+when
+new
+page
+removes
+opt
+-
+in
+\
+n
+before
+pagereveal
+\
+n
+]
+expected
+:
+TIMEOUT
