--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
@@ -108,23 +108,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -135,18 +125,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -174,23 +186,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -201,18 +203,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -245,23 +269,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -272,18 +286,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -310,23 +346,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -337,18 +363,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -375,23 +423,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -402,18 +440,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -442,23 +502,13 @@ tsan
 and
 debug
 and
+not
 fission
 :
+[
 PASS
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
+FAIL
+]
 if
 (
 os
@@ -469,18 +519,40 @@ linux
 "
 )
 and
+not
 tsan
+and
+not
+debug
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-PASS
 [
 PASS
 FAIL
