--- a/testing/web-platform/meta/intersection-observer/scroll-margin-no-intersect.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-no-intersect.html.ini
@@ -27,14 +27,6 @@ linux
 "
 )
 and
-not
-debug
-and
-fission
-and
-not
-asan
-and
 (
 processor
 =
@@ -61,48 +53,14 @@ linux
 "
 )
 and
-not
-debug
-and
-fission
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
 (
-os
+processor
 =
 =
 "
-linux
+x86
 "
 )
-and
-not
-debug
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
 :
 [
 PASS
