--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworklet-denormals.https.window.js.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworklet-denormals.https.window.js.ini
@@ -21,6 +21,22 @@ mac
 "
 )
 and
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
 not
 debug
 :
@@ -37,6 +53,22 @@ AudioWorkletGlobalScope
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+]
 if
 (
 os
