--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-smooth-positions.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-smooth-positions.html.ini
@@ -342,3 +342,46 @@ debug
 PASS
 FAIL
 ]
+[
+Scroll
+positions
+when
+performing
+smooth
+scrolling
+from
+(
+1000
+0
+)
+to
+(
+500
+250
+)
+using
+scrollTo
+(
+)
+]
+expected
+:
+if
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
