--- a/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
+++ b/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
@@ -38,13 +38,7 @@ linux
 "
 )
 and
-not
-asan
-and
 fission
-and
-not
-debug
 and
 (
 processor
@@ -54,6 +48,12 @@ processor
 x86_64
 "
 )
+and
+not
+debug
+and
+not
+asan
 and
 not
 tsan
@@ -72,10 +72,16 @@ linux
 "
 )
 and
-asan
-and
-not
 fission
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
@@ -92,10 +98,29 @@ linux
 )
 and
 not
-asan
+fission
+and
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 fission
+and
+not
+debug
 :
 [
 PASS
