--- a/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
+++ b/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
@@ -26,20 +26,26 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
+not
 asan
 and
-not
-fission
+tsan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -51,16 +57,49 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
-not
 asan
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 (
 os
@@ -71,27 +110,9 @@ android
 "
 )
 and
+not
 debug
 :
-PASS
-if
-os
-=
-=
-"
-win
-"
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -117,20 +138,26 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
+not
 asan
 and
-not
-fission
+tsan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -142,16 +169,49 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
-not
 asan
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 (
 os
@@ -162,27 +222,9 @@ android
 "
 )
 and
+not
 debug
 :
-PASS
-if
-os
-=
-=
-"
-win
-"
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -205,20 +247,26 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
+not
 asan
 and
-not
-fission
+tsan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -230,16 +278,49 @@ linux
 "
 )
 and
-not
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 debug
 and
-not
 asan
 :
+[
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 (
 os
@@ -250,27 +331,9 @@ android
 "
 )
 and
+not
 debug
 :
-PASS
-if
-os
-=
-=
-"
-win
-"
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
 [
 PASS
 FAIL
