Bug 1893722: Recover `StoreID` from prefs in the event of a profiles.ini reset. r=jhirsch
Differential Revision: https://phabricator.services.mozilla.com/D226806

UltraBlame original commit: 4acf8b2527d2bd9e14cf6e668de8a95e89e19abc

--- a/browser/components/profiles/tests/unit/xpcshell.toml
+++ b/browser/components/profiles/tests/unit/xpcshell.toml
@@ -43,6 +43,20 @@ browser
 "
 [
 "
+test_fail_recover_storeID
+.
+js
+"
+]
+[
+"
+test_recover_storeID
+.
+js
+"
+]
+[
+"
 test_selectable_profile_launch
 .
 js
