Bug 1899637 - Pass JSPI suspender results via stack. r=rhunt
Removed the promise slot from SuspenderObject, and attempts to pass
the promise via switch stack operations.

Differential Revision: https://phabricator.services.mozilla.com/D222882

UltraBlame original commit: 77084bbe88ca775e8a3d61fc9af5ae1f1bc95860

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -1607,6 +1607,9 @@ true
 name
 :
 WasmStackSwitchToMain
+result_type
+:
+WordSized
 operands
 :
 suspender
@@ -1646,6 +1649,9 @@ WasmStackContinueOnSuspendable
 operands
 :
 suspender
+:
+WordSized
+result
 :
 WordSized
 call_instruction
