Bug 1899637 - Only suspend wrapped imports that return Promises. r=rhunt
Don't use promise if the result of suspending function is know. Modify stack
to shortcut the exection without promise queue.

Differential Revision: https://phabricator.services.mozilla.com/D221330

UltraBlame original commit: fb539d4ff4b3248b08399373a28e6c943f99f7e5

--- a/js/src/wasm/WasmBuiltinModule.yaml
+++ b/js/src/wasm/WasmBuiltinModule.yaml
@@ -2051,7 +2051,7 @@ name
 AddPromiseReactions
 type
 :
-Args_Int32_GeneralGeneralGeneralGeneral
+Args_General4
 entry
 :
 AddPromiseReactions
@@ -2072,9 +2072,53 @@ externref
 '
 funcref
 '
+result
+:
+'
+anyref
+'
 fail_mode
 :
-FailOnNegI32
+FailOnInvalidRef
+uses_memory
+:
+false
+-
+op
+:
+ForwardExceptionToSuspended
+symbolic_address
+:
+name
+:
+ForwardExceptionToSuspended
+type
+:
+Args_General3
+entry
+:
+ForwardExceptionToSuspended
+export
+:
+forwardExceptionToSuspended
+params
+:
+-
+'
+externref
+'
+-
+'
+exnref
+'
+result
+:
+'
+anyref
+'
+fail_mode
+:
+Infallible
 uses_memory
 :
 false
