Bug 1775605 - disable browser/components/sessionstore/test/browser_label_and_icon.js on both Linux and Windows opt for frequent failures. r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D227029

UltraBlame original commit: 0120cba3f5b5d49251854fc84a67173f01191426

--- a/browser/components/sessionstore/test/browser.toml
+++ b/browser/components/sessionstore/test/browser.toml
@@ -874,6 +874,70 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+"
+#
+Bug
+1775605
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+"
+#
+Bug
+1638958
+"
+os
+=
+=
+'
 mac
 '
 &
@@ -938,14 +1002,11 @@ processor
 =
 =
 '
-x86_64
+x86
 '
 &
 &
 opt
-&
-&
-msix
 "
 #
 Bug
@@ -955,7 +1016,7 @@ os
 =
 =
 '
-mac
+win
 '
 &
 &
@@ -963,9 +1024,9 @@ os_version
 =
 =
 '
-10
+11
 .
-15
+2009
 '
 &
 &
@@ -981,7 +1042,7 @@ opt
 "
 #
 Bug
-1638958
+1775605
 ]
 [
 "
