--- a/browser/base/content/test/fullscreen/browser.toml
+++ b/browser/base/content/test/fullscreen/browser.toml
@@ -209,18 +209,53 @@ js
 ]
 [
 "
-browser_fullscreen_tab_preview
+browser_fullscreen_permissions_prompt
 .
 js
 "
 ]
 [
 "
-browser_fullscreen_permissions_prompt
+browser_fullscreen_tab_preview
 .
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+]
+#
+Bug
+1924271
 [
 "
 browser_fullscreen_warning
