Bug 1919603 - Add new machine learning module to mots r=shtrom,zeid
Add Core: Machine Learning module including aboutinference,genai,ml components. https://groups.google.com/a/mozilla.org/g/governance/c/zY2_XoQPxdw

Differential Revision: https://phabricator.services.mozilla.com/D225731

UltraBlame original commit: a3496f13c4069e33c0b0858a317b6c97b7ff2cdb

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-25T15
+26T06
 :
-36
+47
 :
-41
+31
 .
-074557
+795894
 +
 00
 :
@@ -3490,6 +3490,19 @@ elik
 nick
 :
 tantek
+-
+&
+tarek
+bmo_id
+:
+385707
+name
+:
+Tarek
+Ziad
+nick
+:
+tarek
 -
 &
 tcampbell
@@ -8581,6 +8594,71 @@ jesup
 machine_name
 :
 core_libjar
+-
+machine_name
+:
+core_machine_learning
+name
+:
+'
+Core
+:
+Machine
+Learning
+'
+description
+:
+AI
+services
+and
+local
+inference
+includes
+:
+-
+browser
+/
+components
+/
+genai
+/
+-
+toolkit
+/
+components
+/
+aboutinference
+/
+-
+toolkit
+/
+components
+/
+ml
+/
+meta
+:
+components
+:
+-
+Core
+:
+:
+Machine
+Learning
+owners
+:
+-
+*
+Mardak
+-
+*
+tarek
+peers
+:
+-
+*
+gregtatum
 -
 name
 :
@@ -19095,7 +19173,7 @@ hashes
 :
 config
 :
-14b07792fd8653d3dfb05054faecd197997745ad
+3755a48cc09fef9cee3aa188063e25160d63ed56
 export
 :
-433ee75b293301604103a00cde46efd0a5bf2a50
+3f6354326f463e53dbc19cca9b00505d9950c96a
