Bug 1725806 - Part 2. Implement autocorrect attribute. r=dom-core,webidl,saschanaz,hsivonen
Implement https://html.spec.whatwg.org/#autocorrection

Differential Revision: https://phabricator.services.mozilla.com/D221570

UltraBlame original commit: 4eadad314e19f75161ac63964b2ec053a210ca58

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -17791,6 +17791,32 @@ mirror
 :
 always
 #
+Is
+support
+for
+HTMLElement
+.
+autocorrect
+enabled
+?
+-
+name
+:
+dom
+.
+forms
+.
+autocorrect
+type
+:
+bool
+value
+:
+IS_NIGHTLY_BUILD
+mirror
+:
+always
+#
 Only
 trusted
 submit
