--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -70,6 +70,13 @@ webidl
 enabled
 :
 true
+dom
+.
+forms
+.
+autocorrect
+:
+true
 ]
 [
 idlharness
@@ -5251,42 +5258,6 @@ inherit
 property
 "
 srcdoc
-"
-with
-the
-proper
-type
-]
-expected
-:
-FAIL
-[
-HTMLElement
-interface
-:
-attribute
-autocorrect
-]
-expected
-:
-FAIL
-[
-HTMLElement
-interface
-:
-document
-.
-createElement
-(
-"
-noscript
-"
-)
-must
-inherit
-property
-"
-autocorrect
 "
 with
 the
