--- a/testing/web-platform/meta/html/editing/editing-0/autocorrection/autocorrection.html.ini
+++ b/testing/web-platform/meta/html/editing/editing-0/autocorrection/autocorrection.html.ini
@@ -1,116 +1,11 @@
+prefs
+:
 [
-autocorrection
+dom
 .
-html
-]
-[
-Test
-that
-the
+forms
+.
 autocorrect
-attribute
-is
-available
-on
-HTMLInputElement
-.
-]
-expected
 :
-FAIL
-[
-Test
-that
-the
-autocorrect
-attribute
-is
-available
-on
-HTMLTextAreaElement
-.
+true
 ]
-expected
-:
-FAIL
-[
-Test
-that
-the
-autocorrect
-attribute
-is
-available
-on
-div
-.
-]
-expected
-:
-FAIL
-[
-Test
-that
-the
-autocorrect
-attribute
-is
-available
-on
-form
-.
-]
-expected
-:
-FAIL
-[
-Test
-setting
-the
-autocorrect
-IDL
-attribute
-.
-]
-expected
-:
-FAIL
-[
-Test
-setting
-the
-autocorrect
-attribute
-using
-setAttribute
-.
-]
-expected
-:
-FAIL
-[
-Test
-inheriting
-autocorrection
-from
-a
-form
-.
-]
-expected
-:
-FAIL
-[
-Test
-autocorrection
-in
-password
-URL
-and
-email
-inputs
-.
-]
-expected
-:
-FAIL
