--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -102695,75 +102695,6 @@ mirror
 :
 always
 #
-ifdef
-XP_MACOSX
-#
-This
-will
-automatically
-enable
-text
-substitution
-for
-editable
-elements
-in
-HTML
-.
-#
-This
-value
-is
-like
-layout
-.
-spellCheckDefault
-.
-#
-0
-.
-.
-.
-Disabled
-#
-1
-.
-.
-.
-textarea
-contenteditable
-and
-design
-mode
-#
-2
-.
-.
-.
-text
-textarea
-contenteditable
-and
-design
-mode
--
-name
-:
-ui
-.
-autocorrectDefault
-type
-:
-uint32_t
-value
-:
-1
-mirror
-:
-always
-#
-endif
-#
 -
 -
 -
@@ -108761,7 +108692,7 @@ type
 bool
 value
 :
-false
+true
 mirror
 :
 always
