Bug 1927167 - Update email on telemetry probes for privacy-team from mozilla.com to mozilla.org r=anti-tracking-reviewers,pbz
Also remove Erica due to no longer being with Mozilla.

Differential Revision: https://phabricator.services.mozilla.com/D226926

UltraBlame original commit: cb7e680e7e071aa8667b0d1f0fc6a4a945c59838

--- a/toolkit/components/antitracking/metrics.yaml
+++ b/toolkit/components/antitracking/metrics.yaml
@@ -223,7 +223,7 @@ privacy
 team
 mozilla
 .
-com
+org
 expires
 :
 never
@@ -300,7 +300,7 @@ privacy
 team
 mozilla
 .
-com
+org
 expires
 :
 never
@@ -372,7 +372,7 @@ privacy
 team
 mozilla
 .
-com
+org
 expires
 :
 never
@@ -499,17 +499,12 @@ la
 notification_emails
 :
 -
-ewright
-mozilla
-.
-com
--
 privacy
 -
 team
 mozilla
 .
-com
+org
 expires
 :
 never
