Bug 1844156 - disable browser_webconsole_location_logpoint_debugger_link.js on linux for high frequency failures. r=aryx,devtools-reviewers,jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D227059

UltraBlame original commit: 7b94da70c46935a280806996ac3526252c2a125c

--- a/devtools/client/webconsole/test/browser/_webconsole.toml
+++ b/devtools/client/webconsole/test/browser/_webconsole.toml
@@ -3756,10 +3756,39 @@ if
 "
 ccov
 "
-]
 #
 Bug
 1594897
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1844156
+]
 [
 "
 browser_webconsole_location_styleeditor_link
