Bug 1776936 - disable test_animSVGImage.html on linux/opt headless for ~perma failure. r=aryx
Differential Revision: https://phabricator.services.mozilla.com/D227084

UltraBlame original commit: 377b028d6bbe027105b6a9e6177e656b4253f257

--- a/image/test/mochitest/mochitest.toml
+++ b/image/test/mochitest/mochitest.toml
@@ -672,6 +672,41 @@ due
 to
 bug
 1549058
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+headless
+"
+#
+Bug
+1776936
 ]
 [
 "
