Bug 1926418 - Rename UniFFI async terms, r=markh
I'm hopping to add support for async Rust calls, which could be
confusing if we keep calling our current calls "async". This commit
moves us towards a future where there are 3 types of scaffolding calls:

- Sync (Rust sync function being called synchronously from JS)
- Async (Rust async function being called asynchronously from JS)
- AsyncWrapper (Rust sync function that's wrapped so it can be called asynchronously from JS)

The async-wrapper behavior is now opt-in rather than the default and the
config keys have changed slightly.

Differential Revision: https://phabricator.services.mozilla.com/D226566

UltraBlame original commit: af3903aec82c778686b50a54af0655d7bd32ab2a

--- a/toolkit/components/uniffi-bindgen-gecko-js/config.toml
+++ b/toolkit/components/uniffi-bindgen-gecko-js/config.toml
@@ -69,14 +69,12 @@ syntax
 [
 suggest
 .
-receiver_thread
+async_wrappers
 ]
-default
+enable
 =
-"
-worker
-"
-main
+true
+main_thread
 =
 [
 "
@@ -122,14 +120,12 @@ build
 [
 relevancy
 .
-receiver_thread
+async_wrappers
 ]
-default
+enable
 =
-"
-worker
-"
-main
+true
+main_thread
 =
 [
 "
@@ -152,14 +148,12 @@ score
 [
 remote_settings
 .
-receiver_thread
+async_wrappers
 ]
-default
+enable
 =
-"
-worker
-"
-main
+true
+main_thread
 =
 [
 "
@@ -167,39 +161,89 @@ RemoteSettings
 "
 ]
 [
-uniffi_fixture_refcounts
-.
-receiver_thread
-]
-default
-=
-"
-main
-"
-[
-uniffi_trait_interfaces
-.
-receiver_thread
-]
-default
-=
-"
-main
-"
-[
 uniffi_fixture_callbacks
 .
-receiver_thread
+async_wrappers
 ]
-default
+enable
 =
-"
-worker
-"
-main
+true
+main_thread
 =
 [
 "
 log_even_numbers_main_thread
 "
 ]
+[
+error_support
+.
+async_wrappers
+]
+enable
+=
+true
+[
+tabs
+.
+async_wrappers
+]
+enable
+=
+true
+[
+arithmetical
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_custom_types
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_fixture_external_types
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_geometry
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_rondpoint
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_sprites
+.
+async_wrappers
+]
+enable
+=
+true
+[
+uniffi_todolist
+.
+async_wrappers
+]
+enable
+=
+true
