Bug 1497430 - Implement PushManager.supportedContentEncodings r=webidl,asuth
Differential Revision: https://phabricator.services.mozilla.com/D226986

UltraBlame original commit: cf836d486e029a779847a21d3130581cce46862b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -21789,6 +21789,60 @@ mirror
 :
 always
 #
+Indicate
+the
+deprecated
+aesgcm
+support
+in
+PushManager
+.
+supportedContentEncodings
+.
+#
+#
+This
+does
+not
+affect
+actual
+aesgcm
+support
+any
+new
+and
+existing
+subscriptions
+#
+can
+still
+use
+aesgcm
+regardless
+of
+this
+pref
+.
+-
+name
+:
+dom
+.
+push
+.
+indicate_aesgcm_support
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 Preference
 that
 is
