Bug 1927598 - use the experimental+deltas CRLite filter channel on Nightly. r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D227108

UltraBlame original commit: 2f2d2b59d6a90f611f157c9007baf832a46c37e9

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -96508,6 +96508,12 @@ that
 contain
 all
 revocations
+.
+Stash
+based
+delta
+updates
+.
 #
 -
 "
@@ -96520,6 +96526,31 @@ that
 contain
 all
 revocations
+.
+Stash
+based
+delta
+updates
+.
+#
+-
+"
+experimental
++
+deltas
+"
+=
+>
+clubcards
+that
+contain
+all
+revocations
+.
+Clubcard
+based
+delta
+updates
 .
 -
 name
@@ -96539,6 +96570,8 @@ value
 :
 "
 experimental
++
+deltas
 "
 #
 else
