Bug 1925377: Update treatment of 'Turn on Syncing...' option r=sync-reviewers,fluent-reviewers,desktop-theme-reviewers,markh,hjones
Differential Revision: https://phabricator.services.mozilla.com/D226202

UltraBlame original commit: 0fa7800cba5de2e75d83554ad3c4dbb0be87fa96

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -17210,6 +17210,68 @@ toolbar
 pxiToolbarEnabled
 .
 vpnEnabled
+syncDecouplingUpdates
+:
+description
+:
+Prefs
+to
+control
+the
+updated
+Mozilla
+account
+panel
+flow
+for
+users
+without
+sync
+enabled
+.
+owner
+:
+skhamis
+mozilla
+.
+com
+hasExposure
+:
+false
+variables
+:
+syncSetup
+:
+description
+:
+True
+if
+we
+should
+show
+the
+user
+the
+updated
+sync
+set
+-
+up
+UI
+type
+:
+boolean
+fallbackPref
+:
+identity
+.
+fxaccounts
+.
+toolbar
+.
+syncSetup
+.
+enabled
 fxaClientAssociation
 :
 description
