Bug 1924861 - Only show the first history entry if it has user interaction. r=dom-core,omc-reviewers,sessionstore-reviewers,dao,peterv,tabbrowser-reviewers,mviar,sfoster
Differential Revision: https://phabricator.services.mozilla.com/D221390

UltraBlame original commit: 5b4cea7ea948376a5d92292cad1671360884a9ca

--- a/docshell/test/browser/browser.toml
+++ b/docshell/test/browser/browser.toml
@@ -1446,6 +1446,13 @@ https_first_disabled
 true
 [
 "
+browser_initial_entry_without_interaction
+.
+js
+"
+]
+[
+"
 browser_isInitialDocument
 .
 js
