--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -93196,6 +93196,38 @@ mirror
 :
 always
 #
+To
+be
+used
+in
+automated
+test
+environments
+to
+enable
+event
+telemetry
+#
+collection
+.
+-
+name
+:
+privacy
+.
+imageInputTelemetry
+.
+enableTestMode
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
 -
 -
 -
