Bug 1916679 - Temporarily disable browser_mouseout_notification_panel.js on windows. CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D227179

UltraBlame original commit: 06aa879e3caebae6d63039d7ef8a97dbcb2835dd

--- a/dom/events/test/browser.toml
+++ b/dom/events/test/browser.toml
@@ -333,6 +333,30 @@ browser_mouseout_notification_panel
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+"
+]
+#
+Bug
+1923378
+Fails
+with
+ScotchBonnet
+enabled
+by
+default
+.
 [
 "
 browser_shortcutkey_modifier_conflicts_with_content_accesskey_modifier
