Bug 1922725 - Disable browser_vertical_tabs_stacking_context.js on linux/a11y-checks for high failure rate. r=aryx,sidebar-reviewers,sclements
Differential Revision: https://phabricator.services.mozilla.com/D227053

UltraBlame original commit: d2893066ba699f9bfe8c7217e5d242c302c4f570

--- a/browser/components/sidebar/tests/browser/browser.toml
+++ b/browser/components/sidebar/tests/browser/browser.toml
@@ -221,6 +221,44 @@ browser_vertical_tabs_stacking_context
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+a11y_checks
+"
+]
+#
+Bug
+1922725
 [
 "
 browser_view_sidebar_menu
